# pytomlrs

./: CURRENT_LAYOUT.md  Cargo.toml  README.md  pyproject.toml
src/rust/: Cargo.toml.bak
src/rust/src/: lib.rs
tests/: test_pytomlrs.py
