[package]
name = "pytomlrs2"
version = "0.1.2"
edition = "2021"

[lib]
name = "pytomlrs4"
crate-type = [ "cdylib" ]
path = "src/rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.19.*", features = [ "extension-module" ] }
serde = "1.0.*"
toml = { version = "0.7.6", features = [ "parse" ] }


# [workspace]
# members = [ "src/rust" ]



# [workspace.package]
# version = "0.1.2"
# edition = "2021"
